<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Order">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="GoBack"
                android:paddingTop="10dp"
                android:text="@string/back_button"
                android:textSize="20sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/order_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/back"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/order_text"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/total_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/order_msg"
                android:layout_centerHorizontal="true"
                android:text="@string/total_text" />

            <TextView
                android:id="@+id/total_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/order_msg"
                android:layout_toEndOf="@id/total_txt"
                android:layout_toRightOf="@id/total_txt"
                android:text="@string/initial_price_is" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_sign"
                android:layout_toEndOf="@+id/total_msg"
                android:layout_toRightOf="@+id/total_msg"
                android:layout_below="@+id/order_msg"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/total_txt"
                android:layout_centerHorizontal="true"
                android:text="confirm order"
                android:onClick="OrderConfirming"/>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>